--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "https": "^1.0.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.3",
     "razorpay": "^2.9.0",
     "upper-case": "^2.0.2"
